<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_task_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/add_Task"
                android:textColor="@color/codGray"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/title">

                <EditText
                    android:id="@+id/task_title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/task_title_prompt"
                    android:maxLines="2"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/til_task_title">

                <EditText
                    android:id="@+id/task_description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/task_description_prompt"
                    android:maxLines="7"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/priority_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/priority"
                android:textColor="@color/codGray"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/number_picker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/number_picker" />


            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/date_due_picker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/priority_label"
                app:layout_constraintTop_toBottomOf="@id/til_task_description"
                app:np_divider="@color/codGray"
                app:np_dividerColor="@color/colorPrimary"
                app:np_fadingEdgeEnabled="true"
                app:np_height="40dp"
                app:np_max="5"
                app:np_min="1"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/codGray"
                app:np_selectedTextSize="38dp"
                app:np_textColor="@color/codGray"
                app:np_textSize="20sp"
                app:np_value="3"
                app:np_width="120dp" />

            <TextView
                android:id="@+id/date_due_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/date_due"
                android:textColor="@color/codGray"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/date_due_picker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/date_due_picker" />

            <DatePicker
                android:id="@+id/date_due_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintBottom_toTopOf="@id/cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/date_due_label"
                app:layout_constraintTop_toBottomOf="@id/number_picker" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                style="@style/SaveCancelButton"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/save"
                app:icon="@drawable/ic_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancel_button"
                app:layout_constraintStart_toStartOf="parent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/SaveCancelButton"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/cancel"
                app:icon="@drawable/ic_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/save_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
