<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <!--<LinearLayout
            android:id="@+id/task_item_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/completeTaskColor">

                <ImageView
                    android:id="@+id/task_complete_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_complete"
                    android:tint="@color/codGray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/complete"
                    android:textColor="@color/codGray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/task_complete_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/deleteTaskColor">

                <ImageView
                    android:id="@+id/task_delete_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_delete"
                    android:tint="@color/codGray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/delete"
                    android:textColor="@color/codGray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/task_delete_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/task_item_foreground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fragmentsBackground">

            <TextView
                android:id="@+id/priority_label_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/priority_background"
                android:padding="2dp"
                android:text="@string/priority_value"
                android:textAlignment="center"
                android:textColor="@color/codGray"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/date_value_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/task_title_item" />

            <TextView
                android:id="@+id/task_title_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/task_title"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/priority_label_item"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/task_description_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/task_description"
                app:layout_constraintStart_toEndOf="@id/priority_label_item"
                app:layout_constraintTop_toBottomOf="@id/task_title_item" />

            <TextView
                android:id="@+id/date_value_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:text="@string/date_value"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_description_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</layout>